@@ -12,5 +12,5 @@ setOptions <- function(){
   if(is.null(options()$BFpretestIterations)) options(BFpretestIterations = 100)
   if(is.null(options()$BFapproxOptimizer)) options(BFapproxOptimizer = "optim")
   if(is.null(options()$BFapproxLimits)) options(BFapproxLimits = c(-15,15))
-  
 }
+
