@@ -28,7 +28,7 @@
 \description{
   This function samples from the posterior distribution of
   a \code{BFmodel}, which can be obtained from a
-  \code{BFBayesFactor} object. If is are more than one
+  \code{BFBayesFactor} object. If there is more than one
   numerator in the \code{BFBayesFactor} object, the
   \code{index} argument can be passed to select one
   numerator.
@@ -42,6 +42,19 @@
   \code{\link{anovaBF}}) is unreduced. For a factor with
   two levels, the chain will contain two effect estimates
   that sum to 0.
+
+  Two useful arguments that can be passed to related
+  methods are \code{thin} and \code{columnFilter},
+  currently implemented for methods using \code{nWayAOV}
+  (models with more than one categorical covariate, or a
+  mix of categorical and continuous covariates).
+  \code{thin}, an integer, will keep only every \code{thin}
+  iterations. The default is \code{thin=1}, which keeps all
+  iterations. Argument \code{columnFilter} is either
+  \code{NULL} (for no filtering) or a character vector of
+  extended regular expressions (see \link{regex} help for
+  details). Any column from an effect that matches one of
+  the filters will not be saved.
 }
 \examples{
 ## Sample from the posteriors for two models
@@ -54,5 +67,11 @@ bf = lmBF(extra ~ group + ID, data = sleep, whichRandom="ID", progress=FALSE)
 chains = posterior(bf, iterations = 1000, progress = FALSE)
 
 plot(chains)
+
+## demonstrate column filtering by filtering out participant effects
+data(puzzles)
+bf = lmBF(RT ~ shape + color + shape:color + ID, data=puzzles)
+chains = posterior(bf, iterations = 1000, progress = FALSE, columnFilter="^ID$")
+colnames(chains) # Contains no participant effects
 }
 
